Modifications pour que ça marche bien :3

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Client</name>
+	<name>Sweetcraft</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -18,12 +18,12 @@
 		<link>
 			<name>jars</name>
 			<type>2</type>
-			<locationURI>MCP_LOC/jars</locationURI>
+			<locationURI>\jars</locationURI>
 		</link>
 		<link>
 			<name>src</name>
 			<type>2</type>
-			<locationURI>MCP_LOC/src/minecraft/src</locationURI>
+			<locationURI>\src</locationURI>
 		</link>
 	</linkedResources>
 	<filteredResources>
